# astrodata-jobs

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.yaml  pyproject.toml  railway.json  run_pipeline.sh  vercel.json
.github/workflows/: pipeline.yml
backend/: Dockerfile  contacts_scraper.py  cv_parser.py  cv_pdf.py  cv_tailor.py  main.py  models.py
dashboard/: app.js  dashboard.html  data.js  index.html  job-detail.css  job-detail.js  landing.css  leaderboard.css  leaderboard.html  leaderboard.js  roadmaps-data.json  roadmaps.css  roadmaps.html  roadmaps.js  styles.css
docs/superpowers/plans/: 2026-07-18-cv-pdf-harvard.md
docs/superpowers/specs/: 2026-07-18-cv-pdf-harvard-design.md
src/: enrich.py  export_dashboard.py  main.py  scraper.py  storage.py
tests/: test_api_cv_pdf.py  test_cv_pdf.py  test_tailor_scores.py
