[project]
name = "analisis-empleos-data"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "pyarrow>=25.0.0",
    "python-jobspy>=1.1.82",
    "pyyaml>=6.0.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "google-genai>=1.0.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
]
